highs/interfaces/Highs/Imports.cs


    [LibraryImport(HighsLibName)]
    internal static extern int Highs_getColsBySet(
        IntPtr highs,
        int num_set_entries,
        int[] set,
        ref int num_col,
        double[] costs,
        double[] lower,
        double[] upper,
        ref int num_nz,
        int[] matrix_start,
        int[] matrix_index,
        double[] matrix_value);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_getColsByMask(
        IntPtr highs,
        int[] mask,
        ref int num_col,
        double[] costs,
        double[] lower,
        double[] upper,
        ref int num_nz,
        int[] matrix_start,
        int[] matrix_index,
        double[] matrix_value);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_getRowsByRange(
        IntPtr highs,
        int from_row,
        int to_row,
        ref int num_row,
        double[] lower,
        double[] upper,
        ref int num_nz,
        int[] matrix_start,
        int[] matrix_index,
        double[] matrix_value);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_getRowsBySet(
        IntPtr highs,
        int num_set_entries,
        int[] set,
        ref int num_row,
        double[] lower,
        double[] upper,
        ref int num_nz,
        int[] matrix_start,
        int[] matrix_index,
        double[] matrix_value);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_getRowsByMask(
        IntPtr highs,
        int[] mask,
        ref int num_row,
        double[] lower,
        double[] upper,
        ref int num_nz,
        int[] matrix_start,
        int[] matrix_index,
        double[] matrix_value);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_getBasicVariables(IntPtr highs, int[] basic_variables);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_getBasisInverseRow(IntPtr highs, int row, double[] row_vector, ref int row_num_nz, int[] row_indices);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_getBasisInverseCol(IntPtr highs, int column, double[] col_vector, ref int col_num_nz, int[] col_indices);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_getBasisSolve(
        IntPtr highs,
        double[] rhs,
        double[] solution_vector,
        ref int solution_num_nz,
        int[] solution_indices);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_getBasisTransposeSolve(
        IntPtr highs,
        double[] rhs,
        double[] solution_vector,
        ref int solution_nz,
        int[] solution_indices);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_getReducedRow(IntPtr highs, int row, double[] row_vector, ref int row_num_nz, int[] row_indices);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_getReducedColumn(IntPtr highs, int column, double[] col_vector, ref int col_num_nz, int[] col_indices);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_clearModel(IntPtr highs);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_clearSolver(IntPtr highs);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_passColName(IntPtr highs, int column, string name);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_passRowName(IntPtr highs, int row, string name);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_writeOptions(IntPtr highs, string filename);

    [LibraryImport(HighsLibName)]
    internal static extern int Highs_writeOptionsDeviations(IntPtr highs, string filename);
    #endregion
}